# cleanCodersChallenge

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  prototypes.h  ticTacToe.cpp
.cache/clangd/index/: endwindow.cpp.C9540A3D9060FA94.idx  endwindow.h.8392C81C1BAFE157.idx  main.cpp.C847FF6B8F68E62D.idx  mainwindow.cpp.1313D23215495AE4.idx  mainwindow.h.CBAA3F5124DD7151.idx  startwindow.cpp.F952505020CBBD20.idx  startwindow.h.3C6C7E68DB87AF35.idx  ticTacToe.cpp.34E59AEF740850E3.idx  ticTacToe.h.A5D111FF8C090A75.idx
gui/: endwindow.cpp  endwindow.h  endwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  startwindow.cpp  startwindow.h  startwindow.ui
src/: ticTacToe.cpp  ticTacToe.h
